complete design rework for login, landing-page, registration pw reset account settings. still work todo at main section. added new background service, which runs permanently checking the url and changes the body style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 
 <router-outlet />
-<div class="separator"></div>
-<app-footer></app-footer>
+<!-- <div class="separator"></div> -->
+<app-footer [isMain]="true" *ngIf="globals.isMainSiteActive()"></app-footer>
