--- a/src/app/authentication/registration/step-0/step-0.component.html
+++ b/src/app/authentication/registration/step-0/step-0.component.html
@@ -1,9 +1,9 @@
 <div class="stepping">
-  <img src="../../../../assets/img/Devices.png" />
+  <img src="../../../../assets/img/Devices_modified.png" />
   <span>SCHRITT 1 VON 3</span>
   <h2>Einrichtung Ihres Kontos abschliessen</h2>
   <p>
-    Chill'N'Flix wird individuell fuer Sie angepasst. <br> Erstellen Sie ein
+    VideoFlix wird individuell für dich angepasst. <br> Erstelle ein
     Passwort, um Netflix zu nutzen.
   </p>
   <div (click)="nextStep()" class="continue-btn">
