--- a/src/app/authentication/registration/step-2/step-2.component.html
+++ b/src/app/authentication/registration/step-2/step-2.component.html
@@ -5,7 +5,7 @@
   
     <h2>Hervorragend ! Dein Konto wurde erstellt.</h2>
     <p>
-      Bitte bestaetige nun nur noch deine Emailadresse 
+      Bitte bestätige nun nur noch deine Emailadresse <br>
       um die Registrierung abzuschliessen !
     </p>
     
