--- a/src/app/head/profile-header/profile-header.component.html
+++ b/src/app/head/profile-header/profile-header.component.html
@@ -1,10 +1,11 @@
 <div class="header-cont">
   <div class="left-cont">
-    <div class="logo">
+    <!-- <div class="logo">
       <span>CHILL</span>
       <span class="n-letter">'N'</span>
       <span>FLIX</span>
-    </div>
+    </div> -->
+    <img src="./../../../assets/logos/Logo.png" alt="logo">
   </div>
   <div class="right-cont">
     <div class="drop-down-btn" (click)="toggleArrow()" [matMenuTriggerFor]="menu">
@@ -15,16 +16,16 @@
     </div>
     <mat-menu #menu="matMenu" (closed)="menuOpened(false)" xPosition="before">
       <button mat-menu-item>
-        <mat-icon class="outlined">lock</mat-icon>
+        <mat-icon class="blue">lock</mat-icon>
         <span class="menu-pnts">Datenschutz</span>
       </button>
       <button mat-menu-item>
-        <mat-icon>description</mat-icon>
+        <mat-icon class="blue">description</mat-icon>
         <span class="menu-pnts">Impressum</span>
       </button>
-      <div style="height: 2px; background-color: black"></div>
+      <!-- <div style="height: 2px; background-color: black"></div> -->
       <button (click)="backService.logOut()" mat-menu-item>
-        <mat-icon>logout</mat-icon>
+        <mat-icon class="blue">logout</mat-icon>
         <span class="menu-pnts" style="text-align: center">Logout</span>
       </button>
     </mat-menu>
