--- a/src/app/authentication/pw-reset/pw-reset.component.html
+++ b/src/app/authentication/pw-reset/pw-reset.component.html
@@ -2,32 +2,34 @@
     <app-header></app-header>
 
     <div class="mail-cont" *ngIf="!resetWasSent">
-        <span>Passwort zuruecksetzen</span>
-        <p>Geben Sie ihre E-Mailadresse ein um das Passwort zurueckzusetzen !</p>
-        <div class="mail-input">
-            <div class="mail-input-cont">
-                <input type="email" name="mail" placeholder="E-Mailadresse" [formControl]="mail" required>  
+        <span>Passwort zurücksetzen</span>
+        <p>Geben Sie ihre E-Mailadresse ein um das Passwort zurückzusetzen !</p>
+        <div class="mail-container custom-input-login">
+            <mat-form-field>
+              <mat-label>Gib deine E-Mail ein</mat-label>
+              <input
+                matInput
+                placeholder="email@mail.com"
+                [formControl]="mail"
+                required
+              />
+            </mat-form-field>
+            <div (click)="checkMail()" type="button" class="login-btn">
+              <div>Passwort zurücksetzen <mat-icon>arrow_forward</mat-icon></div>
             </div>
-            <button (click)="checkMail()" class="go-btn" [disabled]="mail.invalid" [ngClass]="mail.invalid ? 'disabled' : 'enabled' ">
-                <span>Passwort zuruecksetzen </span> <mat-icon>arrow_forward</mat-icon>
-            </button>
-        </div>
-        @if (mail.invalid && mail.touched && mail.hasError('pattern')) {
-            <span>Email Adresse ungueltig!</span>
-        }
-        @if (notFound()) {
-            <span>Email konnte nicht gefunden wurden</span>
-        }
+          </div>
     </div>
 
     <div *ngIf="resetWasSent" class="mail-cont">
         <span>Eine Email wurde an die angegebene Adresse gesendet !</span>
-        <p>Folgen Sie den Anweisungen in der Email, um Ihr Passwort zurueckzusetzen !</p>
+        <p>Folgen Sie den Anweisungen in der Email, um Ihr Passwort zurückzusetzen !</p>
         <div class="mail-input">
             <button class="back-btn" [routerLink]="['/login/']">
-                <span>Zurueck zum Login</span>
+                <span>Zurück zum Login</span>
             </button>
         </div>
     </div>
+
+    <app-footer></app-footer>
 
 </section>
