--- a/src/app/authentication/registration/registration.component.scss
+++ b/src/app/authentication/registration/registration.component.scss
@@ -4,13 +4,13 @@
   max-width: 1920px;
   width:100%;
   height: 100vh;
-  @include dFlex(column, flex-start, center);
+  margin: 0 124px;
+  @include dFlex(column, space-between, center);
   > .header-cont {
     width: 100%;
     height: 100px;
     @include dFlex(row, space-between, center);
     > .logo {
-      margin-left: 124px;
       @include dFlex(row, flex-start, center);
       > span {
         color: #e50815;
@@ -23,22 +23,25 @@
       }
     }
     > .right-cont {
-      margin-right: 124px;
       > a {
         text-decoration: none;
-        font-size: 24px;
-        color: black;
+        font-size: 18px;
+        color: #ffffff;
+        background-color: #2E3EDF;
+        padding: 12px 24px;
+        border-radius: 40px;
         &:hover {
-          text-decoration: underline;
+          background-color: #5460e5;
           cursor: pointer;
         }
       }
     }
   }
   > .steps {
-    margin-top: 120px;
-    width: 448px;
     text-align: center;
+    padding: 43px 56px;
+    border-radius: 48px;
+    background-color: #ffffff;
   }
   
 }
