--- a/src/app/authentication/registration/step-0/step-0.component.scss
+++ b/src/app/authentication/registration/step-0/step-0.component.scss
@@ -1,39 +1,45 @@
 @import "../../../../styles.scss";
 
 .stepping {
-    @include dFlex(column, center, center);
-    > img {
-        height: 90px;
-        margin-bottom: 20px;
+  @include dFlex(column, center, center);
+  > img {
+    height: 90px;
+    margin-bottom: 20px;
+  }
+  > span {
+    padding-top: 20px;
+    color: #6D19FF;
+    font-weight: 500;
+    font-size: 18px;
+  }
+  > h2 {
+    font-size: 32px;
+    margin-bottom: 0px;
+    color: #2E3EDF;
+  }
+  > p {
+    font-size: 22px;
+    font-weight: 500;
+    color: #2E3EDF;
+  }
+  > .continue-btn {
+    margin-top: 16px;
+    transition: all 0.125s ease-in-out;
+    @include dFlex(row, center, center);
+    padding: 8px 24px;
+    background-color: #2E3EDF;
+    ;
+    width: 360px;
+    height: 48px;
+    border-radius: 40px;
+    &:hover {
+      cursor: pointer;
+      background-color: #5460e5;
     }
     > span {
-        padding-top: 20px;
+      font-size: 28px;
+      font-weight: 600;
+      color: #ffffff;
     }
-    > h2 {
-        font-size: 32px;
-        margin-bottom: 0px;
-    }
-    > p {
-        font-size: 22px;
-        font-weight: 500;
-    }
-    > .continue-btn {
-        margin-top: 16px;
-        transition: all 0.125s ease-in-out;
-        @include dFlex(row, center, center);
-        padding: 8px 24px;
-        background-color: #e50914;
-        width: 360px;
-        height: 48px;
-        border-radius: 4px;
-        &:hover {
-            cursor: pointer;
-            background-color: #f1313b;
-        }
-        > span {
-            font-size: 28px;
-            font-weight: 600;
-            color: #ffffff;
-        }
-    }
+  }
 }
