--- a/src/app/authentication/registration/step-1/step-1.component.scss
+++ b/src/app/authentication/registration/step-1/step-1.component.scss
@@ -3,16 +3,23 @@
 .stepping {
   @include dFlex(column, center, center);
   > .step-headline {
-    width: 90%;
     @include dFlex(row, space-between, center);
     > div {
       @include dFlex(row, center, center);
       padding: 4px;
       border-radius: 50%;
+      > mat-icon {
+        color: #6D19FF;
+      }
       &:hover {
         cursor: pointer;
-        background-color: rgba($color: #000000, $alpha: 0.2);
+        background-color: rgba($color: #6D19FF, $alpha: 0.2);
       }
+    }
+    > span {
+      color: #6D19FF;
+      font-weight: 500;
+      font-size: 18px;
     }
   }
   > span {
@@ -21,15 +28,16 @@
   > h2 {
     font-size: 32px;
     margin-bottom: 0px;
+    color: #2E3EDF;
   }
   > p {
     font-size: 22px;
     font-weight: 500;
+    color: #2E3EDF;
   }
   > div {
     width: 100%;
     > .mail-container {
-      margin-bottom: 16px;
       > mat-form-field {
         width: 100%;
         font-family: "Raleway", sans-serif;
@@ -47,13 +55,13 @@
     transition: all 0.125s ease-in-out;
     @include dFlex(row, center, center);
     padding: 8px 24px;
-    background-color: #e50914;
+    background-color: #2E3EDF;
     width: 360px;
     height: 48px;
-    border-radius: 4px;
+    border-radius: 40px;
     &:hover {
       cursor: pointer;
-      background-color: #f1313b;
+      background-color: #5460e5;
     }
     > span {
       font-size: 28px;
@@ -64,21 +72,37 @@
 }
 
 :host ::ng-deep .custom-input-register .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-    border-color: black;
+    border-color: #2E3EDF;
     background-color: #ffffff;
     border-width: 1px;
     border-style: solid;
-    border-radius: 4px;
-    
+    border-radius: 12px;
+    color: #2E3EDF;
 }
 
 input {
-    color: black;
+    color: #2E3EDF !important;
+    font-size: 18px;
+    font-weight: 400;
     &::placeholder {
-      color: black;
+      color: #2E3EDF !important;
     }
 }
 
 mat-label {
-    color: #000000;
+    color: #5460e5;
+}
+
+.blue-color {
+  color: #2E3EDF;
+}
+
+
+::ng-deep .mdc-line-ripple::after {
+  display: none;
+}
+
+::ng-deep .mdc-line-ripple::before {
+  display: none;
+  border-bottom-style: none;
 }
