--- a/src/app/authentication/registration/step-2/step-2.component.scss
+++ b/src/app/authentication/registration/step-2/step-2.component.scss
@@ -3,28 +3,23 @@
 .stepping {
   @include dFlex(column, center, center);
   > .step-headline {
-    width: 90%;
-    @include dFlex(row, space-between, center);
-    > div {
-      @include dFlex(row, center, center);
-      padding: 4px;
-      border-radius: 50%;
-      &:hover {
-        cursor: pointer;
-        background-color: rgba($color: #000000, $alpha: 0.2);
-      }
+    width: 100%;
+    @include dFlex(row, flex-end, center);
+    > span {
+      color: #6D19FF;
+      font-weight: 500;
+      font-size: 18px;
     }
-  }
-  > span {
-    padding-top: 20px;
   }
   > h2 {
     font-size: 32px;
     margin-bottom: 0px;
+    color: #2E3EDF;
   }
   > p {
     font-size: 22px;
     font-weight: 500;
+    color: #2E3EDF;
   }
 
   > .continue-btn {
@@ -32,13 +27,13 @@
     transition: all 0.125s ease-in-out;
     @include dFlex(row, center, center);
     padding: 8px 24px;
-    background-color: #e50914;
+    background-color: #2E3EDF;
     width: 360px;
     height: 48px;
-    border-radius: 4px;
+    border-radius: 40px;
     &:hover {
       cursor: pointer;
-      background-color: #f1313b;
+      background-color: #5460e5;
     }
     > span {
       font-size: 28px;
