--- a/src/app/main-content/profile/profile.component.scss
+++ b/src/app/main-content/profile/profile.component.scss
@@ -2,20 +2,22 @@
 
 
 section {
-    @include dFlex(row, center, center);
+    @include dFlex(column, space-between, center);
     width: 100%;
+    height: 100vh;
     > .profile {
         color: #ffffff;
         width: 100%;
         max-width: 1920px;
-        min-height: 100vh;
-        @media (max-width: 1920px) {
-            margin: 0px 32px;
-        }
+        // margin-top: -224px;
+        height: 820px;
         @include dFlex(row, flex-start, flex-start);
         > .left-nav {
             @include dFlex(column, flex-start, flex-start);
             width: 30%;
+            @media (max-width: 1920px) {
+                margin-left: 32px;
+            }
             > .back-to-main {
                 @include dFlex(row, center,center);
                 gap: 16px;
@@ -52,6 +54,9 @@ section {
         > .right-nav {
             width: 70%;
             @include dFlex(column, flex-start, flex-start);
+            @media (max-width: 1920px) {
+                margin-right: 32px;
+            }
             > h1 {
                 font-size: 40px;
                 margin-top: 12px
@@ -65,8 +70,9 @@ section {
 /*Activeness*/
 
 .active{ 
-    background-color: rgba($color: #2f2f2f, $alpha: 1.0);
+    background-color: rgba($color: #2e3edf, $alpha: 1.0);
     > mat-icon {
+        color: #ffffff;
         font-variation-settings: 'FILL' 1; 
     }
 }
@@ -74,7 +80,6 @@ section {
 app-profile-header{
     @include dFlex(row, center,center);
     width: 100%;
-    background-color: #141414;
 }
 
 
@@ -94,9 +99,10 @@ app-profile-header{
       border-radius: 4px;
       margin-bottom: 16px;
         &:hover {
-            background-color: rgba($color: #2f2f2f, $alpha: 1.0);
+            background-color: rgba($color: #2e3edf, $alpha: 1.0);
             cursor: pointer;
             > mat-icon {
+                color: #ffffff;
                 font-variation-settings: 'FILL' 1;
             }
         }
@@ -114,6 +120,8 @@ app-profile-header{
 span {
     color: #ffffff;
     font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
 }
 
 .video-overlay {
