--- a/src/app/main-content/profile/user-settings/user-settings.component.scss
+++ b/src/app/main-content/profile/user-settings/user-settings.component.scss
@@ -36,11 +36,12 @@
       font-size: 18px;
       width: 50%;
       padding: 16px;
-      border-radius: 4px;
-      border: 1px solid #4f4e4e;
-      background-color: #2f2f2f;
+      border-radius: 40px;
+      border: none;
+      background-color: #2e3edf;
+      outline: none;
       &:hover {
-        background-color: #4f4e4e;
+        background-color: #5460e5;
       }
     }
   }
@@ -52,7 +53,7 @@
   font-size: 18px;
   > span {
     > .video-count {
-      color: #e50815;
+      color: #5460e5;
     }
   }
 }
@@ -92,17 +93,17 @@ input[type="number"] {
 ::ng-deep
   .custom-input-settings
   .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-  background-color: rgba(255, 255, 255, 0.08) !important;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  border-radius: 12px;
+  border: 2px solid rgba($color: #2e3edf, $alpha: 1.0);
 }
 
 ::ng-deep
   .custom-input-settings-none
   .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-  background-color: rgba(255, 255, 255, 0.01) !important;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.03) !important;
+  border-radius: 12px;
+  border: 2px solid rgba($color: #2e3edf, $alpha: 0.3);
 }
 
 ::ng-deep .mdc-line-ripple::after {
