--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 
 <router-outlet />
 <!-- <div class="separator"></div> -->
-<app-footer [isMain]="true" *ngIf="globals.isMainSiteActive()"></app-footer>
+<!-- <app-footer [isMain]="true" *ngIf="globals.isMainSiteActive()"></app-footer> -->
