--- a/src/app/main-content/main/main.component.scss
+++ b/src/app/main-content/main/main.component.scss
@@ -1,66 +1,122 @@
 @import "../../../styles.scss";
 
 section {
-    max-width: 1920px;
+  max-width: 1920px;
+  width: 100%;
+  //height: 100vh;
+  @include dFlex(column, flex-start, center);
+  margin: 0px 124px;
+  > app-logged-header {
     width: 100%;
-    //height: 100vh;
-    @include dFlex(column, flex-start, center);
-    margin: 0px 124px;
-    > app-logged-header {
-        width: 100%;
-        margin-bottom: 64px;
-        @media (max-width: 1920px) {
-            display: flex;
-            position: fixed;
-            max-width: 1920px;
-            z-index: 1000;
-        }
-    }
-    > app-slider-comp {
-        width: 100%;
-        margin-top: 120px;
-    }
+    display: flex;
+    position: fixed;
+    z-index: 1000;
+    max-width: 1920px;
+  }
 
-    > .profile-overlay {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-       // background-color: red;
-        @include dFlex(row, center, flex-start);
-        padding-top: 124px;
-        > .overlay-container {
-            height: 600px;
-            width: 500px;
-            background-color: rgba($color: #040404, $alpha: 1.0);
-            border: #141414 1px solid;
-            border-radius: 6px;
-            box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
-                        -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
-            padding: 6px;
-        }
+  > .preview-description {
+    width: 100%;
+    @include dFlex(column, center, flex-start);
+    margin-top: 170px;
+    z-index: 5;
+    gap: 32px;
+    @media (max-width: 1920px) {
+      max-width: 1920px;
     }
-    > .video-overlay {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        z-index: 20;
-        @include dFlex(row, center, flex-start);
-        padding-top: 124px;
-        > .v-overlay-container {
-            height: 700px;
-            width: 900px;
-            background-color: rgba($color: #040404, $alpha: 1.0);
-            border: #141414 1px solid;
-            border-radius: 6px;
-            box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
-                        -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
-            //padding: 12px;
-        }
+    > h1 {
+      margin: 0;
+      font-size: 88px;
+      font-weight: 700;
+      color: #ffffff;
+      @media (max-width: 1920px) {
+        margin-left: 32px;
+      }
     }
+    > span {
+      font-weight: 400;
+      font-size: 16px;
+      color: #ffffff;
+      @media (max-width: 1920px) {
+        margin-left: 32px;
+      }
+    }
+    > .play-btn {
+      padding: 12px 24px;
+      border-radius: 40px;
+      gap: 4px;
+      background-color: #2e3edf;
+      @media (max-width: 1920px) {
+        margin-left: 32px;
+      }
+      @include dFlex(row, center, center);
+      > span {
+        color: #ffffff;
+        font-size: 18px;
+        font-weight: 700;
+      }
+      > mat-icon {
+        font-family: "Material Icons Rounded";
+        font-size: 32px;
+        height: 32px;
+        width: 32px;
+        color: #ffffff;
+        font-variation-settings: "FILL" 1, "wght" 700;
+      }
+    }
+  }
 
+  > app-slider-comp {
+    width: 100%;
+    margin-top: 56px;
+    z-index: 5;
+  }
+
+  > .profile-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    // background-color: red;
+    @include dFlex(row, center, flex-start);
+    padding-top: 124px;
+    > .overlay-container {
+      height: 600px;
+      width: 500px;
+      background-color: rgba($color: #040404, $alpha: 1);
+      border: #141414 1px solid;
+      border-radius: 6px;
+      box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
+        -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+      padding: 6px;
+    }
+  }
+  > .video-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 20;
+    @include dFlex(row, center, flex-start);
+    padding-top: 124px;
+    > .v-overlay-container {
+      height: 700px;
+      width: 900px;
+      background-color: rgba($color: #040404, $alpha: 1);
+      border: #141414 1px solid;
+      border-radius: 6px;
+      box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
+        -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+      //padding: 12px;
+    }
+  }
 }
 
+app-footer {
+  position: fixed;
+  bottom: 0;
+  margin-top: -120px !important;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
+  z-index: 5;
+}
