--- a/src/app/main-content/slider-comp/slider-comp.component.html
+++ b/src/app/main-content/slider-comp/slider-comp.component.html
@@ -1,7 +1,7 @@
 <section class="slider-cont">
 
   <div class="category-container">
-    <h2>Videos</h2>
+    <h2>Neu auf VideoFlix</h2>
     <div class="scroll-container">
       <div class="scroll-button left">
         <button (click)="nextVideos('+', 'category1', 1)">
@@ -30,7 +30,7 @@
   </div>
 
 
-  <div class="category-container">
+  <!-- <div class="category-container">
     <h2>Videos</h2>
     <div class="scroll-container">
       <div class="scroll-button left">
@@ -57,7 +57,7 @@
         </button>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <ngx-spinner
   bdColor="rgba(0, 0, 0, 0.8)"
