--- a/src/app/main-content/slider-comp/slider-comp.component.html
+++ b/src/app/main-content/slider-comp/slider-comp.component.html
@@ -31,7 +31,7 @@
 
 
   <div class="category-container">
-    <h2>Documentation</h2>
+    <h2>Dokumentation</h2>
     <div class="scroll-container">
       <div class="scroll-button left">
         <button (click)="nextVideos('+', 'category2', 2)">
