--- a/src/app/head/profile-header/profile-header.component.scss
+++ b/src/app/head/profile-header/profile-header.component.scss
@@ -74,6 +74,7 @@
   padding: 0 !important;
   background-color: rgba($color: #ffffff, $alpha: 1.0);
   border-radius: 12px !important;
+  border-top-right-radius: 0px !important;
 }
 
 ::ng-deep .mat-mdc-menu-item {
