--- a/src/app/main-content/profile/file-upload/file-upload.component.scss
+++ b/src/app/main-content/profile/file-upload/file-upload.component.scss
@@ -22,7 +22,7 @@
       width: 70%;
     }
     > .number {
-      width: 30%
+      width: 30%;
     }
   }
   > .btns {
@@ -66,7 +66,6 @@ input[type="number"] {
   appearance: textfield;
 }
 
-
 input {
   color: #ffffff !important;
   &::placeholder {
@@ -99,7 +98,7 @@ textarea {
   .mdc-text-field--filled:not(.mdc-text-field--disabled) {
   background-color: rgba(255, 255, 255, 0.1) !important;
   border-radius: 12px;
-  border: 2px solid rgba($color: #2e3edf, $alpha: 1.0);
+  border: 2px solid rgba($color: #2e3edf, $alpha: 1);
 }
 
 ::ng-deep
@@ -119,9 +118,41 @@ textarea {
   border-bottom-style: none;
 }
 
+::ng-deep .mat-mdc-select {
+  color: #ffffff !important;
+}
 
+::ng-deep div.mat-mdc-select-panel .mat-mdc-option {
+  transition: all 150ms ease-in-out !important;
+  &:hover {
+    background-color: rgba($color: #2e3edf, $alpha: 0.3) !important;
+  }
+}
 
-.upload-cont{
+::ng-deep .mat-mdc-option:focus.mdc-list-item,
+.mat-mdc-option.mat-mdc-option-active.mdc-list-item {
+  background-color: rgba($color: #2e3edf, $alpha: 0.3) !important;
+}
+
+::ng-deep .mat-mdc-option .mdc-list-item__primary-text {
+  font-family: "Raleway", sans-serif !important;
+  font-weight: 700 !important;
+  color: #2e3edf !important;
+}
+
+::ng-deep .mat-pseudo-checkbox-minimal.mat-pseudo-checkbox-checked::after,
+.mat-pseudo-checkbox-minimal.mat-pseudo-checkbox-indeterminate::after {
+  color: #ffffff !important;
+}
+
+::ng-deep
+  .cdk-overlay-pane:not(.mat-mdc-select-panel-above)
+  div.mat-mdc-select-panel {
+  border-radius: 12px;
+  padding: 0px;
+}
+
+.upload-cont {
   max-width: 100%;
   width: 100%;
   > h4 {
@@ -133,7 +164,7 @@ textarea {
     gap: 40px;
     min-height: 80px;
     margin-bottom: 16px;
-    border: 2px solid rgba($color: #2e3edf, $alpha: 1.0);
+    border: 2px solid rgba($color: #2e3edf, $alpha: 1);
     border-radius: 12px;
     padding-top: 4px;
     background-color: rgba(255, 255, 255, 0.1);
@@ -147,7 +178,7 @@ textarea {
         transition: all 250ms ease-in-out;
         padding: 16px 0px;
         font-size: 16px;
-        font-family: 'Raleway';
+        font-family: "Raleway";
         background-color: #2e3edf;
         border: none;
         outline: none;
@@ -167,7 +198,7 @@ textarea {
       > .file-data {
         @include dFlex(column, center, flex-start);
         span {
-          color: #ffffff
+          color: #ffffff;
         }
       }
     }
