rework edit overlay for account settings at video section

--- a/src/app/main-content/profile/profile.component.html
+++ b/src/app/main-content/profile/profile.component.html
@@ -41,7 +41,7 @@
 </section>
 
 <div *ngIf="this.globals.isVidOpen()" class="video-overlay">
-  <div class="v-overlay-container">
+  <div [ngClass]="globals.isMyVideoEditing() ? 'v-overlay-container-edit' : 'v-overlay-container'">
       <app-videoplayer [isInMyVideos]="true"></app-videoplayer>
   </div>
 </div>
