--- a/src/app/main-content/profile/profile.component.scss
+++ b/src/app/main-content/profile/profile.component.scss
@@ -134,13 +134,19 @@ span {
     @include dFlex(row, center, flex-start);
     padding-top: 124px;
     > .v-overlay-container {
-        height: 700px;
         width: 900px;
-        background-color: rgba($color: #040404, $alpha: 1.0);
-        border: #141414 1px solid;
-        border-radius: 6px;
+        background-color: rgba($color: #141414, $alpha: 1.0);
+        border-radius: 12px;
         box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
                     -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
         //padding: 12px;
+    }
+    .v-overlay-container-edit {
+        width: 900px;
+        background-color: rgba($color: #141414, $alpha: 1.0);
+        border: #5460e5 1px solid;
+        border-radius: 12px;
+        box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
+                    -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
     }
 }
