--- a/src/app/main-content/videoplayer/video-edit/video-edit.component.scss
+++ b/src/app/main-content/videoplayer/video-edit/video-edit.component.scss
@@ -16,7 +16,7 @@
     //margin-left: 8px;
     &:hover {
       cursor: pointer;
-      background-color: rgba($color: #141414, $alpha: 0.8);
+      background-color: #5460e5;
     }
   }
 }
@@ -59,15 +59,16 @@
         font-size: 18px;
         width: 50%;
         padding: 16px;
-        border-radius: 4px;
-        border: 1px solid #4f4e4e;
-        background-color: #2f2f2f;
+        border: none;
+        outline: none;
+        border-radius: 40px;
+        background-color: #2e3edf;
       }
       > .enabled {
         transition: all 250ms ease-in-out;
         cursor: pointer;
         &:hover {
-          background-color: #4f4e4e;
+          background-color: #5460e5;
         }
       }
     }
@@ -81,12 +82,10 @@
         color: #ffffff;
         gap: 16px;
         padding: 16px;
-        border-radius: 4px;
-        border: 1px solid #e50914;
-        background-color: #e50914;
+        border-radius: 12px;
+        background-color: #0f21e2;
         &:hover {
-            background-color: #c11119;
-            border-color: #c11119;
+            background-color: #0011ca;
             color: #ffffff;
             cursor: pointer;
             > mat-icon {
@@ -146,17 +145,17 @@ textarea {
 ::ng-deep
   .custom-input-settings
   .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-  background-color: rgba(255, 255, 255, 0.08) !important;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  border-radius: 12px;
+  border: 2px solid rgba($color: #2e3edf, $alpha: 1.0);
 }
 
 ::ng-deep
   .custom-input-settings-none
   .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-  background-color: rgba(255, 255, 255, 0.01) !important;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.03) !important;
+  border-radius: 12px;
+  border: 2px solid rgba($color: #2e3edf, $alpha: 0.3);
 }
 
 ::ng-deep .mdc-line-ripple::after {
@@ -167,6 +166,41 @@ textarea {
   display: none;
   border-bottom-style: none;
 }
+
+::ng-deep .mat-mdc-select {
+  color: #ffffff !important;
+}
+
+::ng-deep div.mat-mdc-select-panel .mat-mdc-option {
+  transition: all 150ms ease-in-out !important;
+  &:hover {
+    background-color: rgba($color: #2e3edf, $alpha: 0.3) !important;
+  }
+}
+
+::ng-deep .mat-mdc-option:focus.mdc-list-item,
+.mat-mdc-option.mat-mdc-option-active.mdc-list-item {
+  background-color: rgba($color: #2e3edf, $alpha: 0.3) !important;
+}
+
+::ng-deep .mat-mdc-option .mdc-list-item__primary-text {
+  font-family: "Raleway", sans-serif !important;
+  font-weight: 700 !important;
+  color: #2e3edf !important;
+}
+
+::ng-deep .mat-pseudo-checkbox-minimal.mat-pseudo-checkbox-checked::after,
+.mat-pseudo-checkbox-minimal.mat-pseudo-checkbox-indeterminate::after {
+  color: #ffffff !important;
+}
+
+::ng-deep
+  .cdk-overlay-pane:not(.mat-mdc-select-panel-above)
+  div.mat-mdc-select-panel {
+  border-radius: 12px;
+  padding: 0px;
+}
+
 
 .flex-start {
   @include dFlex(row, flex-start, center);
