--- a/src/app/main-content/videoplayer/videoplayer.component.scss
+++ b/src/app/main-content/videoplayer/videoplayer.component.scss
@@ -47,26 +47,25 @@
                     @include dFlex(row,center,center);
                     gap: 8px;
                     border: none;
-                    border-radius: 4px;
+                    border-radius: 40px;
                     outline: none;
-                    background-color: #ffffff;
-                    padding: 12px;
-                    padding-right: 18px;
+                    background-color: #2e3edf;
+                    padding: 12px 24px;
                     font-family: 'Raleway';
-                    font-weight: 600;
+                    font-weight: 700;
                     font-size: 28px;
-                    color: #000000;
+                    color: #ffffff;
                     > mat-icon {
                         font-family: 'Material Icons Rounded';
                         font-size: 32px;
                         height: 32px;
                         width: 32px;
-                        color: #000000;
+                        color: #ffffff;
                         font-variation-settings: 'FILL' 1, 'wght' 700;
                     }
                     &:hover {
                         cursor: pointer;
-                        background-color: rgba($color: #b3b3b3, $alpha: 0.5);
+                        background-color: #5460e5;
                     }
                 }
             }
